# Other

./: FizzBuzz.cpp  crunchyrollExtractor.py  crunchyroll_rename_dls.py  find_primes.py  geodashremap.ahk  mee6xp.ahk  nbtTooltipLogRegex.txt  reddit_unsave_posts.py  temple.txt  text space thing.py
CharacterMod/: README.md  build.gradle  gradle.properties
FileCreator/: README.md
FizzBuzz/: FizzBuzz.sln
LoginDiscordNotifier/: .gitignore  pom.xml
PowerPlantBudget-MostEfficent/: LICENSE
RemoteControl/: Cargo.toml  app.vbs
RemoteControl/src/: main.rs
SpigotCustomCrafting/: CraftingRecipe.java  RecipeManager.java
autozoom/: package-lock.json  package.json  tsconfig.json  tslint.json
basic-motion-detection-halloween/: enable_disable_fog_machine.py  halloweenMotionDetector - OriginallyWorks.py  halloweenMotionDetector - WithResetFrame.py  halloweenMotionDetector.py
crunchyroll-utils/: crunchyrollExtractor.py  crunchyroll_rename_dls.py
isdbot/: LICENSE  README.md  example_config.json  index.js  package.json
motion-detection-haloween-cringe/: enable_disable_fog_machine.py  exportCommands.txt  halloweenMotionDetector - OriginallyWorks.py  halloweenMotionDetector - WithResetFrame.py  halloweenMotionDetector.py  threadingTest.py
nfctouchtasks/: pubspec.yaml
outlastmcplugin/: pom.xml
pythonlessons/: pythonturtle.py
reddit_url_downloader/: getlinks.py  script.py
router-reboot/: .env.example  index.js  package.json  pnpm-lock.yaml
turkey/: Cargo.toml
userbotspam/: index.js  package.json
yt-dl tools/: crunchyrollExtractor.py  fileRenamer.py
(+1479 files in other folders)
