[package]
name = "RemoteControl"
version = "0.1.0"
authors = ["Diamond <33725716+DiamondMiner88@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
winapi = { version = "0.3", features = ["winuser", "powrprof"] }
